--- a/about.html
+++ b/about.html
@@ -158,10 +158,10 @@
                 <h1 class="mb-5">Ban Lãnh Đạo</h1>
             </div>
             <div class="row g-4">
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/giam-doc.jpg" alt="" style="height: 350px;">
+                            <img class="img-fluid" src="img/team-mem/giam-doc.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href="#"><i class="fa fa-facebook-f"></i></a>
@@ -169,15 +169,15 @@
                             <a class="btn btn-square mx-1" href="#"><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Giám đốc</small>
+                            <h5 class="mb-0">Nguyễn Đặng Phương Vinh</h5>
+                            <small><strong>Giám đốc</strong></small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-kinh-doanh.jpg" alt="" style="height: 350px;">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-kinh-doanh.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -185,15 +185,15 @@
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Trưởng phòng kinh doanh</small>
+                            <h5 class="mb-0">Nguyễn Hồng Hân</h5>
+                            <small>Trưởng phòng <strong>Kinh Doanh</strong></small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-dieu-hanh.jpg" alt="" style="height: 350px;">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-dieu-hanh.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -201,15 +201,15 @@
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Trưởng phòng điều hành</small>
+                            <h5 class="mb-0">Mai thị ánh tuyết</h5>
+                            <small>Trưởng phòng <strong>Điều Hành</strong></small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-marketing.jpg" alt="" style="height: 350px;">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-marketing.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -217,15 +217,15 @@
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Trưởng phòng marketing</small>
+                            <h5 class="mb-0">Huỳnh Tuấn Kiệt</h5>
+                            <small>Trưởng phòng <strong>Marketing</strong></small>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-mem/truong-phong-huong-dan-vien.jpg" alt="" style="height: 350px;">
+                            <img class="img-fluid" src="img/team-mem/truong-phong-huong-dan-vien.jpg" alt="" style="height: 350px;object-fit: fill;">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-facebook-f"></i></a>
@@ -233,8 +233,8 @@
                             <a class="btn btn-square mx-1" href=""><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Trưởng phòng hướng dẫn viên</small>
+                            <h5 class="mb-0">Mai Quốc Huy</h5>
+                            <small>Trưởng phòng <strong>Hướng Dẫn Viên</strong></small>
                         </div>
                     </div>
                 </div>
