--- a/about.html
+++ b/about.html
@@ -49,8 +49,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-map-marker me-3"></i><span style="color:#FFFF;">Ocean
-                    </span><span style="color:#FE8800;">Trip</span></h1>
+                <h1 class="text-primary m-0"><img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;"><span style="color:#FFFF;">Ocean </span><span style="color:#ffbd3b;">Trip</span></h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
