--- a/dltn.html
+++ b/dltn.html
@@ -46,7 +46,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-map-marker me-3"></i><span style="color:#FFFF;">Ocean </span><span style="color:#FE8800;">Trip</span></h1>
+                <h1 class="text-primary m-0"><img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;"><span style="color:#FFFF;">Ocean </span><span style="color:#ffbd3b;">Trip</span></h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -240,6 +240,86 @@
                             <p>HÀ NỘI – SAPA – FANSIPAN – YÊN TỬ – HẠ LONG – NINH BÌNH</p>
                             <div class="d-flex justify-content-center mb-2">
                                 <a href="dltn-mienbac.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="package-item">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="img/package-7.jpg" alt="" style="height: 320px;">
+                        </div>
+                        <div class="d-flex border-bottom">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>6 ngày 5 đêm</small>
+                        </div>
+                        <div class="text-center p-4">
+                            <h3 class="mb-0">6.990.000 VNĐ</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div>
+                            <p>Tour miền Tây - Phú Quốc</p>
+                            <p>TP.HCM – CẦN THƠ – SÓC TRĂNG – BẠC LIÊU – CÀ MAU – RẠCH GIÁ – PHÚ QUỐC – NAM ĐẢO – HÒN THƠM</p>
+                            <div class="d-flex justify-content-center mb-2">
+                                <a href="dltn-mientay-phuquoc.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.8s">
+                    <div class="package-item">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="img/package-8.jpg" alt="" style="height: 320px;">
+                        </div>
+                        <div class="d-flex border-bottom">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>7 ngày 6 đêm</small>
+                        </div>
+                        <div class="text-center p-4">
+                            <h3 class="mb-0">9.990.000 VNĐ</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div>
+                            <p>Tour văn học - Việt Nam</p>
+                            <p>Hà Nội – Hà Nam – Nam Định – Thái Bình – Quảng Trị – Huế</p>
+                            <div class="d-flex justify-content-center mb-2">
+                                <a href="dltn-vanhoc-vietnam.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
+                                <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.9s">
+                    <div class="package-item">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid" src="img/package-9.jpg" alt="" style="height: 320px;">
+                        </div>
+                        <div class="d-flex border-bottom">
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-calendar text-primary me-2"></i>Khởi hành: -</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock-o text-primary me-2"></i>5 ngày 4 đêm</small>
+                        </div>
+                        <div class="text-center p-4">
+                            <h3 class="mb-0">10.189.000 VNĐ</h3>
+                            <div class="mb-3">
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                                <small class="fa fa-star text-primary"></small>
+                            </div>
+                            <p>Tour Văn Học: Dấu ấn văn chương trên dải đất miền Trung</p>
+                            <p>Huế – Quảng Trị – Đà Nẵng</p>
+                            <div class="d-flex justify-content-center mb-2">
+                                <a href="dltn-vanhoc-mientrung.html" class="btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Xem thêm</a>
                                 <a href="#" class="btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Đặt Ngay</a>
                             </div>
                         </div>
