--- a/dltn.html
+++ b/dltn.html
@@ -46,8 +46,9 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;"><span style="color:#FFFF;">Ocean </span><span style="color:#ffbd3b;">Trip</span></h1>
-                <!-- <img src="img/logo.png" alt="Logo"> -->
+                <img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;">
+                <h1 class="text-primary m-0"><span style="color:#FFFF;">Ocean <span style="color:#ffbd3b;">Trip</span></h1>
+                <p id = "slogan">Rực rỡ bản sắc - Lắng đọng thời gian</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
