--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;"><span style="color:#FFFF;">Ocean </span><span style="color:#ffbd3b;">Trip</span></h1>
+                <img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;">
+                <h1 class="text-primary m-0"><span style="color:#FFFF;">Ocean <span style="color:#ffbd3b;">Trip</span></h1>
+                <p id = "slogan">Rực rỡ bản sắc - Lắng đọng thời gian</p>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
@@ -64,7 +66,7 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-10 pt-lg-5 mt-lg-5 text-center">
-                        <h1 class="display-4 text-white mb-3 animated slideInDown">Rực rỡ bản sắc - Lắng đọng thời gian</h1>
+                        <h1 class="display-3 text-white mb-3 animated slideInDown">Tự do khám phá</h1>
                         <!-- <p class="fs-4 text-white mb-4 animated slideInDown">Tempor erat elitr rebum at clita diam amet diam et eos erat ipsum lorem sit</p> -->
                         <div class="position-relative w-75 mx-auto animated slideInDown">
                             <input class="form-control border-0 rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Nhập địa điểm...">
