--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light bg-custom px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <img src="img/logo.jfif" alt="Logo" style="background-color: transparent;mix-blend-mode: multiply;padding-right: 10px;">
+                <img src="img/logo-m.png" alt="Logo" style="padding-right: 10px;">
                 <h1 class="text-primary m-0"><span style="color:#FFFF;">Ocean <span style="color:#ffbd3b;">Trip</span></h1>
                 <p id = "slogan">Rực rỡ bản sắc - Lắng đọng thời gian</p>
             </a>
